--- a/meiduo_hersin/templates/index.html
+++ b/meiduo_hersin/templates/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>美多商城-首页</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
-    <script type="text/javascript" src="../static/js/host.js"></script>
-	<script type="text/javascript" src="../static/js/common.js"></script>
-	<script type="text/javascript" src="../static/js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="../static/js/axios-0.18.0.min.js"></script>
-	<script type="text/javascript" src="../static/js/jquery-1.12.4.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
+    <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/common.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/jquery-1.12.4.min.js') }}"></script>
 </head>
 <body>
 	<div id="app" v-cloak>
@@ -40,7 +40,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="../static/images/logo.png"></a>
+		<a href="index.html" class="logo fl"><img src="{{ static('images/logo.png') }}"></a>
 		<div class="search_wrap fl">
 			<form method="get" action="/search/" class="search_con">
                 <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
@@ -55,8 +55,11 @@
 		</div>
 
 		<div class="guest_cart fr">
-            <a href="/carts/" class="cart_name fl">我的购物车</a>
+{#            <a href="/carts/" class="cart_name fl" @click="get_carts">我的购物车</a>#}
+              <a href="/carts/" :title="carts" class="cart_name fl">我的购物车</a>
+{#            <a href="javascript:;" class="cart_name fl" v-model="carts" @mouseover="get_carts" >我的购物车</a>#}
             <div class="goods_count fl" id="show_count">[[ cart_total_count ]]</div>
+{#            <div class="goods_count fl" id="show_count">{{ carts[1].count }}</div>#}
             <ul class="cart_goods_show">
                 <li v-for="cart in carts">
                     <img :src="cart.default_image_url" alt="商品图片">
@@ -83,7 +86,7 @@
 	<div class="pos_center_con clearfix">
 		<ul class="slide">
             {% for content in contents.index_lbt %}
-            <li><a href="{{ content.url }}"><img src="{{ content.image }}" alt="{{ content.title }}"></a></li>
+            <li><a href="{{ content.url }}"><img src="{{ content.image.url }}" alt="{{ content.title }}"></a></li>
             {% endfor %}
         </ul>
 		<div class="prev"></div>
@@ -125,7 +128,7 @@
         {% endfor %}
     </ul>
     {% for content in contents.index_ytgg %}
-    <a href="{{ content.url }}" class="advs"><img src="{{ content.image }}"></a>
+    <a href="{{ content.url }}" class="advs"><img src="{{ content.image.url }}"></a>
     {% endfor %}
 </div>
 	</div>
@@ -167,7 +170,7 @@
             <ul v-show="f1_tab===2" class="goods_list fl">
                 {% for content in contents.index_1f_cxdj %}
                 <li>
-                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                     <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                     <div class="price">{{ content.text }}</div>
                 </li>
@@ -176,7 +179,7 @@
             <ul v-show="f1_tab===3" class="goods_list fl">
                 {% for content in contents.index_1f_sjpj %}
                 <li>
-                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                     <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                     <div class="price">{{ content.text }}</div>
                 </li>
@@ -196,7 +199,7 @@
     </div>
     <div class="goods_con clearfix">
         <div class="goods_banner fl">
-            <img src="{{ contents.index_2f_logo.0.image}}">
+            <img src="{{ contents.index_2f_logo.0.image.url}}">
             <div class="channel">
                 {% for content in contents.index_2f_pd %}
                 <a href="{{ content.url }}">{{ content.title }}</a>
@@ -212,7 +215,7 @@
             <ul v-show="f2_tab===1" class="goods_list fl">
                 {% for content in contents.index_2f_cxdj %}
                 <li>
-                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                     <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                     <div class="price">{{ content.text }}</div>
                 </li>
@@ -221,7 +224,7 @@
             <ul v-show="f2_tab===2" class="goods_list fl">
                 {% for content in contents.index_2f_jjhg %}
                 <li>
-                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                    <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                     <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                     <div class="price">{{ content.text }}</div>
                 </li>
@@ -284,14 +287,14 @@
 			<span>|</span>
 			<a href="#">招聘人才</a>
 			<span>|</span>
-			<a href="#">友情链接</a>		
+			<a href="#">友情链接</a>
 		</div>
 		<p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
 	</div>
-	<script type="text/javascript" src="../static/js/slide.js"></script>
-	<script type="text/javascript" src="../static/js/common.js"></script>
-	<script type="text/javascript" src="../static/js/index.js"></script>
+	<script type="text/javascript" src="{{ static('js/slide.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/common.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/index.js') }}"></script>
 </body>
 </html>
